# statistics-and-machine-learning-examples

./: README.md  main.py  pyproject.toml  requirements.txt
timeseries/sarimax_models/: sarimax.ipynb
